@@ -1,3 +1,8 @@
+Version Next
+
+    - Vaadin7: fixed bug preventing ContextApplication.showError() from working
+    - Vaadin7: Call Application.setCurrent() in ContextApplication.invoke()
+
 Version 1.0.432 Released June 29, 2012
 
     - SpringContextApplication: add "vaadinContextConfigLocation" init param
